Agrego soluciones de arboles de decision.

--- a/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Arboles de Decision.lyx
+++ b/4 Ano/Introduccion a la Inteligencia Artificial/Soluciones/Arboles de Decision.lyx
@@ -324,7 +324,10 @@ Soluciones
 \end_layout
 
 \begin_layout Enumerate
-COMPLETAR.
+\begin_inset Formula $1-\left[\cfrac{2}{4}\cdot\left(-\cfrac{2}{2}\cdot\log_{2}\cfrac{2}{2}-0\right)\right]-\left[\cfrac{2}{4}\cdot\left(-\cfrac{0}{2}\cdot\log_{2}\cfrac{0}{2}-0\right)\right]=1$
+\end_inset
+
+.
 \end_layout
 
 \begin_layout Enumerate
